--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   
   <script src="lib/react.development.js"></script>
   <script src="lib/react-dom.development.js"></script>
+  <script src="lib/react-router-dom.js"></script>
+  <script src="lib/react-router.js"></script>
+  <script src="lib/history.js"></script>
+
 
   <link rel="stylesheet" href="assets/style/main.css">
   <title>React Starter</title>
